Improve property path optimization