@@ -1,12 +1,16 @@
 package cz.iocb.sparql.engine.translator.imcode;
 
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import cz.iocb.sparql.engine.database.Column;
 import cz.iocb.sparql.engine.database.ConstantColumn;
@@ -24,15 +28,18 @@ public class SqlRecursive extends SqlIntercode
     private static final Table leftTable = new Table("tab0");
     private static final Table rightTable = new Table("tab1");
 
-    private final SqlIntercode init;
-    private final SqlIntercode next;
-    private final UsedVariable endVar;
-    private final String joinName;
-    private final String beginName;
+    public final SqlIntercode init;
+    public final SqlIntercode next;
+    public final UsedVariable endVar;
+    public final String joinName;
+    public final String beginName;
+    public final List<Column> iv;
+    public final List<Column> ev;
+    public final String graphName;
 
 
     protected SqlRecursive(UsedVariables variables, SqlIntercode init, SqlIntercode next, UsedVariable endVar,
-            String joinName, String beginName)
+            String joinName, String beginName, List<Column> iv, List<Column> ev, String graphName)
     {
         super(variables, init.isDeterministic() && next.isDeterministic());
         this.init = init;
@@ -40,79 +47,117 @@ public class SqlRecursive extends SqlIntercode
         this.endVar = endVar;
         this.joinName = joinName;
         this.beginName = beginName;
+        this.iv = iv;
+        this.ev = ev;
+        this.graphName = graphName;
     }
 
 
     public static SqlIntercode create(Request request, SqlIntercode init, SqlIntercode next, String beginName,
-            String joinName, String endName)
+            String joinName, String endName, String graphName)
     {
-        return create(request, init, next, beginName, joinName, endName, null);
+        return create(request, init, next, beginName, joinName, endName, graphName, null);
     }
 
 
     protected static SqlIntercode create(Request request, SqlIntercode init, SqlIntercode next, String beginName,
-            String joinName, String endName, Set<String> restrictions)
+            String joinName, String endName, String graphName, Set<String> restrictions)
     {
         if(init == SqlNoSolution.get())
             return SqlNoSolution.get();
 
-        if(next instanceof SqlUnion)
+        while(next instanceof SqlUnion union)
         {
-            UsedVariable initEnd = init.getVariables().get(endName);
+            UsedVariable endVar = createEndVar(endName, init, next);
 
-            next = SqlUnion.union(((SqlUnion) next).getChilds().stream()
-                    .filter(c -> (new UsedPairedVariable(initEnd, c.getVariables().get(joinName))).isJoinable())
-                    .collect(toList()));
+            List<SqlIntercode> childs = union.getChilds().stream()
+                    .filter(c -> (new UsedPairedVariable(endVar, c.getVariables().get(joinName))).isJoinable())
+                    .toList();
+
+            if(childs.size() == union.getChilds().size())
+                break;
+
+            next = SqlUnion.union(childs);
+        }
+
+        while(next instanceof SqlUnion union)
+        {
+            Set<ResourceClass> classes = new HashSet<>(init.getVariable(endName).getClasses());
+
+            while(true)
+            {
+                Set<ResourceClass> additional = new HashSet<>(classes);
+
+                for(SqlIntercode child : union.getChilds())
+                    if(child.getVariable(joinName).getClasses().stream()
+                            .anyMatch(c -> classes.contains(c) || classes.contains(c.getGeneralClass())))
+                        additional.addAll(child.getVariable(endName).getClasses());
+
+                if(additional.equals(classes))
+                    break;
+
+                classes.addAll(additional);
+            }
+
+            List<SqlIntercode> childs = union.getChilds().stream().filter(x -> x.getVariable(joinName).getClasses()
+                    .stream().anyMatch(c -> classes.contains(c) || classes.contains(c.getGeneralClass()))).toList();
+
+            if(childs.size() == union.getChilds().size())
+                break;
+
+            next = SqlUnion.union(childs);
         }
 
         if(next == SqlNoSolution.get())
             return SqlDistinct.create(request, init,
-                    Stream.of(beginName, endName).filter(n -> n != null).collect(toSet()));
+                    Stream.of(beginName, endName, graphName).filter(n -> n != null).collect(toSet()));
 
         if(!(new UsedPairedVariable(init.getVariables().get(endName), next.getVariables().get(joinName))).isJoinable())
             return SqlDistinct.create(request, init,
-                    Stream.of(beginName, endName).filter(n -> n != null).collect(toSet()));
+                    Stream.of(beginName, endName, graphName).filter(n -> n != null).collect(toSet()));
 
 
         /* standard recursion */
-
+        Map<Column, Column> map = new HashMap<>();
         UsedVariables variables = new UsedVariables();
 
         for(UsedVariable var : init.getVariables().getValues())
-            if(!var.getName().equals(endName) && (restrictions == null || restrictions.contains(var.getName())))
-                variables.add(var);
-
-        UsedVariable endVar = new UsedVariable(endName, false);
-
-        if(restrictions == null || restrictions.contains(endName))
-            variables.add(endVar);
-
-        //TODO: handle constant columns
-
-        Set<ResourceClass> initEndClasses = init.getVariables().get(endName).getClasses();
-        Set<ResourceClass> nextEndClasses = next.getVariables().get(endName).getClasses();
-
-        for(ResourceClass initClass : initEndClasses)
         {
-            if(nextEndClasses.contains(initClass))
-                endVar.addMapping(initClass, initClass.createColumns(endName));
-            else if(nextEndClasses.contains(initClass.getGeneralClass()))
-                endVar.addMapping(initClass.getGeneralClass(), initClass.getGeneralClass().createColumns(endName));
-            else if(nextEndClasses.stream().noneMatch(r -> r.getGeneralClass() == initClass))
-                endVar.addMapping(initClass, initClass.createColumns(endName));
+            if(!var.getName().equals(endName))
+            {
+                UsedVariable v = new UsedVariable(var.getName(), var.canBeNull());
+
+                for(Entry<ResourceClass, List<Column>> e : var.getMappings().entrySet())
+                {
+                    List<Column> safeNames = e.getKey().createColumns(v.getName());
+
+                    v.addMapping(e.getKey(), IntStream.range(0, e.getValue().size()).mapToObj(i -> {
+                        Column c = e.getValue().get(i);
+
+                        if(c instanceof ConstantColumn)
+                            return c;
+                        else
+                            return map.computeIfAbsent(c, k -> safeNames.get(i));
+                    }).toList());
+                }
+
+                variables.add(v);
+            }
         }
 
-        for(ResourceClass nextClass : nextEndClasses)
-        {
-            if(initEndClasses.contains(nextClass))
-                continue;
-            else if(initEndClasses.contains(nextClass.getGeneralClass()))
-                endVar.addMapping(nextClass.getGeneralClass(), nextClass.getGeneralClass().createColumns(endName));
-            else if(initEndClasses.stream().noneMatch(r -> r.getGeneralClass() == nextClass))
-                endVar.addMapping(nextClass, nextClass.createColumns(endName));
-        }
+        UsedVariable endVar = createEndVar(endName, init, next);
+        variables.add(endVar);
 
-        return new SqlRecursive(variables, init, next, endVar, joinName, beginName);
+
+        UsedVariables tmp = new UsedVariables(init.getVariables());
+        tmp.remove(endName);
+
+        List<Column> innerColumns = new ArrayList<>(tmp.getNonConstantColumns());
+        List<Column> outerColumns = innerColumns.stream().map(c -> map.get(c)).toList();
+
+
+        return new SqlRecursive(variables.restrict(restrictions), init, next, endVar, joinName, beginName, innerColumns,
+                outerColumns, graphName);
     }
 
 
@@ -127,32 +172,39 @@ public class SqlRecursive extends SqlIntercode
         childRestrictions.add(endVar.getName());
         childRestrictions.add(joinName);
 
+        if(graphName != null)
+            childRestrictions.add(graphName);
+
         if(beginName != null)
             childRestrictions.add(beginName);
 
-        return create(request, init.optimize(request, childRestrictions, reduced),
-                next.optimize(request, childRestrictions, reduced), beginName, joinName, endVar.getName(),
-                restrictions);
+        SqlIntercode initOpt = init.optimize(request, childRestrictions, reduced);
+        SqlIntercode nextOpt = next.optimize(request, childRestrictions, reduced);
+
+        if(beginName != null && initOpt instanceof SqlUnion union)
+        {
+            List<SqlIntercode> segs = SqlDistinct.expandUnionByResourceClasses(request, union, Set.of(beginName));
+            return SqlUnion.union(segs.stream()
+                    .map(s -> create(request, s, next, beginName, joinName, endVar.getName(), graphName, restrictions))
+                    .toList());
+        }
+
+        return create(request, initOpt, nextOpt, beginName, joinName, endVar.getName(), graphName, restrictions);
     }
 
 
     @Override
     public String translate(Request request)
     {
-        UsedVariables initVars = new UsedVariables(init.variables);
-        initVars.remove(endVar.getName());
-
-        List<Column> sharedColumns = new LinkedList<Column>(initVars.getNonConstantColumns());
-
         List<ResourceClass> endVarClasses = new LinkedList<ResourceClass>(endVar.getClasses()); // to stable order
 
         StringBuilder builder = new StringBuilder();
 
         builder.append("WITH RECURSIVE recursion(");
 
-        builder.append(sharedColumns.stream().map(Object::toString).collect(joining(", ")));
+        builder.append(ev.stream().map(Object::toString).collect(joining(", ")));
 
-        boolean hasRecursionVariable = !sharedColumns.isEmpty();
+        boolean hasRecursionVariable = !ev.isEmpty();
 
         for(ResourceClass resClass : endVarClasses)
         {
@@ -175,9 +227,9 @@ public class SqlRecursive extends SqlIntercode
 
         builder.append(") AS (SELECT ");
 
-        builder.append(sharedColumns.stream().map(Object::toString).collect(joining(", ")));
+        builder.append(iv.stream().map(Object::toString).collect(joining(", ")));
 
-        boolean hasInitSelect = !sharedColumns.isEmpty();
+        boolean hasInitSelect = !iv.isEmpty();
 
         UsedVariable initEndVariable = init.getVariables().get(endVar.getName());
 
@@ -208,9 +260,9 @@ public class SqlRecursive extends SqlIntercode
 
         builder.append(" UNION SELECT ");
 
-        builder.append(sharedColumns.stream().map(c -> c.fromTable(leftTable).toString()).collect(joining(", ")));
+        builder.append(ev.stream().map(c -> c.fromTable(leftTable).toString()).collect(joining(", ")));
 
-        boolean hasUnionSelect = !sharedColumns.isEmpty();
+        boolean hasUnionSelect = !ev.isEmpty();
 
         UsedVariable nextEndVariable = next.getVariables().get(endVar.getName());
 
@@ -241,7 +293,11 @@ public class SqlRecursive extends SqlIntercode
         builder.append(") AS ");
         builder.append(rightTable);
 
-        String condition = generateJoinCondition(endVar, next.getVariables().get(joinName), leftTable, rightTable);
+        UsedVariables tmp = new UsedVariables(variables);
+        tmp.remove(endVar.getName());
+        tmp.add(new UsedVariable(joinName, endVar.getMappings(), endVar.canBeNull()));
+
+        String condition = generateJoinCondition(tmp, next.getVariables(), leftTable, rightTable);
 
         if(condition != null)
         {
@@ -261,5 +317,38 @@ public class SqlRecursive extends SqlIntercode
         builder.append(" FROM recursion");
 
         return builder.toString();
+    }
+
+
+    private static UsedVariable createEndVar(String endName, SqlIntercode init, SqlIntercode next)
+    {
+        UsedVariable endVar = new UsedVariable(endName, false);
+
+        //TODO: handle constant columns
+
+        Set<ResourceClass> initEndClasses = init.getVariables().get(endName).getClasses();
+        Set<ResourceClass> nextEndClasses = next.getVariables().get(endName).getClasses();
+
+        for(ResourceClass initClass : initEndClasses)
+        {
+            if(nextEndClasses.contains(initClass))
+                endVar.addMapping(initClass, initClass.createColumns(endName));
+            else if(nextEndClasses.contains(initClass.getGeneralClass()))
+                endVar.addMapping(initClass.getGeneralClass(), initClass.getGeneralClass().createColumns(endName));
+            else if(nextEndClasses.stream().noneMatch(r -> r.getGeneralClass() == initClass))
+                endVar.addMapping(initClass, initClass.createColumns(endName));
+        }
+
+        for(ResourceClass nextClass : nextEndClasses)
+        {
+            if(initEndClasses.contains(nextClass))
+                continue;
+            else if(initEndClasses.contains(nextClass.getGeneralClass()))
+                endVar.addMapping(nextClass.getGeneralClass(), nextClass.getGeneralClass().createColumns(endName));
+            else if(initEndClasses.stream().noneMatch(r -> r.getGeneralClass() == nextClass))
+                endVar.addMapping(nextClass, nextClass.createColumns(endName));
+        }
+
+        return endVar;
     }
 }
